--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>RISE Automation</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="interos.png"
   </head>
   <body>
     <h1>RISE Automation GOV-6 | GOV-7</h1>
