--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="magic.png"
   </head>
   <body>
-    <h1>GOV-6 | GOV-7 Auto Gen v2 (DO NOT USE -- **UPDATE IN PROGRESS**)</h1>
+    <h1>GOV-6 | GOV-7 Auto Gen v2</h1>
     <form>
       <label for="g6">GOV-6 Countries:</label>
       <input type="text" id="g6" name="g6" /><br /><br />
