--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>6-7 Auto Gen v2</title>
+    <title>GOV 6 & 7 Auto Gen v2</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="magic.png"
+    <link rel="icon" href="face.png"
   </head>
   <body>
     <h1>GOV-6 | GOV-7 Auto Gen v2</h1>
