--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GOV 6 & 7 Auto Gen v2</title>
+    <title>GOV 6 & 7 Auto Gen v3</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="face.png"
   </head>
@@ -20,7 +20,7 @@
     <br />
     <h3>GOV-6 Output</h3>
     <p id="gov6">
-      [INSERT COI] does not maintain any business operations in countries that
+      The company does not maintain any business operations in countries that
       are listed on the United States Trade Representative (USTR) Special 301
       Watch List.
     </p>
@@ -28,7 +28,7 @@
     <br />
     <h3>GOV-7 Output</h3>
     <p id="gov7">
-      [INSERT COI] does not operate in a country currently listed as imposing
+      The company does not operate in a country currently listed as imposing
       significant barriers to trade by the United States Trade Representative.
     </p>
     <div id="score7"></div>
